--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.7.1",
     "autoprefixer": "7.1.6",
     "axios": "^0.24.0",
@@ -12,6 +15,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "6.26.0",
+    "bootstrap": "^5.1.3",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
@@ -26,6 +30,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -37,6 +42,8 @@
     "react": "^17.0.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.0.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^7.2.6",
     "redirect": "^0.2.0",
     "resolve": "1.6.0",
